# Tycoon-Monorepo

./: .gitignore  README.md  SHOP_GRID_PR_NOTES.md  STELLAR_WAVE_CHECKLIST.md  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  jest.config.ts  package-lock.json  package.json
backend/docs/: GAMES_MATCHMAKING_RUNBOOK.md  REDIS_CACHE_RUNBOOK.md  SHOP_PURCHASES_RUNBOOK.md  SW-BE-007-redis-dto-validation-error-mapping.md  webhooks-runbook.md
backend/src/: app.module.ts  main.ts
backend/test/: games-replay.e2e-spec.ts
contract/: Cargo.toml  MIGRATION_LEGACY_ENTRYPOINTS.md  PR_BODY_SW_CON_001.md  PR_NOTES_SW_CT_020.md  SECURITY_REVIEW_CHECKLIST.md
contract/integration-tests/: ACCEPTANCE_CRITERIA.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_TEMPLATE.md  README.md  TEST_SCENARIOS.md
contract/integration-tests/src/: boost_admin_flow.rs  boost_system_integration.rs  fixture.rs  game_reward_flow.rs  legacy_entrypoints.rs  lib.rs  reward_transfer_flow.rs  security_review_checklist.rs  simulation_scenarios.rs
contract/integration-tests/tests/: collectibles_integration.rs  cross_contract_integration.rs  game_flow.rs  reward_system_integration.rs  token_interactions.rs
docs/: architecture.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/docs/: SW-FE-001-landing-hero-rollout.md  SW-FE-002-near-wallet-ts-strictness.md  SW-FE-003-near-wallet-vitest-rtl-coverage.md  SW-FE-006-shop-grid-telemetry.md  (+2 more)
shop-api/: .env.example  PR-NOTES.md  package.json  tsconfig.json
src/: app.module.ts  main.ts
(+187 files in other folders)
